cli/tests/snapshots/cli__run_images@ellipse1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/ellipse1.gleam
---
<svg width="60.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <ellipse cx="30.0" cy="15.0" rx="30.0" ry="15.0" transform="rotate(0.0 30.0 15.0)" fill="none" stroke="rgba(0, 0, 0, 1.0)" />
</svg>
