cli/tests/snapshots/cli__run_images@empty_scene1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/empty_scene1.gleam
---
<svg width="160.0" height="90.0" xmlns="http://www.w3.org/2000/svg">
  <rect x="0.0" y="0.0" width="160.0" height="90.0" transform="rotate(0.0 80.0 45.0)" fill="none" stroke="rgba(0, 0, 0, 1.0)" />
</svg>
