cli/tests/snapshots/cli__run_images@overlay_align_offset1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/overlay_align_offset1.gleam
---
<svg width="136.2750302935009" height="136.2750302935009" xmlns="http://www.w3.org/2000/svg">
  <g>
    <ellipse cx="106.27503029350088" cy="106.27503029350088" rx="30.0" ry="30.0" transform="rotate(0.0 106.27503029350088 106.27503029350088)" fill="rgba(100, 149, 237, 1.0)" />
    <polygon points="126.27503029350088,53.13751514675044 108.33898536015246,108.33898536015246 53.13751514675043,126.27503029350086 6.18033988749896,92.15864547265352 6.180339887498938,34.1163848208474 53.13751514675043,7.105427357601002e-15 108.33898536015245,17.936044933348406 126.27503029350088,73.13751514675045 92.15864547265352,120.09469040600192 34.11638482084737,120.09469040600192 7.105427357601002e-15,73.13751514675045 17.936044933348406,17.93604493334842 73.13751514675043,0.0 120.09469040600192,34.11638482084736 120.09469040600192,92.1586454726535 73.13751514675045,126.27503029350088 17.93604493334842,108.33898536015246 0.0,53.137515146750445 34.11638482084736,6.18033988749896 92.1586454726535,6.1803398874989455" fill="rgba(0, 0, 128, 1.0)" />
  </g>
</svg>
