cli/tests/snapshots/cli__run_images@place_image1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/place_image1.gleam
---
<svg width="48.0" height="48.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="48.0" height="48.0" transform="rotate(0.0 24.0 24.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <rect x="0.0" y="0.0" width="48.0" height="48.0" transform="rotate(0.0 24.0 24.0)" fill="rgba(211, 211, 211, 1.0)" />
      <polygon points="24.0,10.143593539448982 40.0,37.856406460551014 8.0,37.856406460551014" fill="rgba(255, 0, 0, 1.0)" />
    </g>
  </g>
</svg>
